Name:           test-utils
Version:        1.2.0.0
Cabal-Version:  >= 1.14
Author:         Richard Cobbe
Synopsis:       Utility functions for writing HUnit tests
Extra-source-files: HISTORY
Build-Type:     Simple
License:        AllRightsReserved
Copyright:      (c) 2012 Richard Cobbe
Maintainer:     cobbe@ccs.neu.edu
Stability:      alpha
Category:       Test
Description:    This package provides various helper functions for writing tests with HUnit.

Library
  Default-Language: Haskell2010
  Ghc-Options: -fwarn-incomplete-patterns
  Build-Depends:
    base >= 4.7.0 && < 5,
    HUnit == 1.2.*,
    parsec == 3.1.*,
    QuickCheck == 2.6.*,
    text == 0.11.*
  Exposed-Modules: Test.Utils

Test-Suite test-utils-tests
  Main-Is: RunTests.hs
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  Ghc-Options: -fwarn-incomplete-patterns
  Build-Depends:
    test-utils,
    base >= 4.7.0 && < 5,
    parsec == 3.1.*,
    QuickCheck == 2.6.*,
    HUnit == 1.2.*,
    text == 0.11.*
