-- Copyright 2012-2017 Richard Cobbe
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--   http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name:           test-utils
Version:        1.5.0.0
Cabal-Version:  >= 1.14
Author:         Richard Cobbe
Synopsis:       Utility functions for writing HUnit tests
Extra-source-files: HISTORY
Build-Type:     Simple
License:        Apache-2.0
License-File:   LICENSE
Copyright:      (c) 2012-2017 Richard Cobbe
Maintainer:     cobbe@ccs.neu.edu
Stability:      alpha
Category:       Test
Description:    This package provides various helper functions for writing tests with HUnit.

Library
  Default-Language: Haskell2010
  hs-source-dirs: lib
  Ghc-Options: -fwarn-incomplete-patterns
  Build-Depends:
    base >= 4.7.0 && < 5,
    HUnit == 1.6.*,
    parsec == 3.1.*,
    QuickCheck == 2.9.*,
    text == 1.2.*
  Exposed-Modules: Test.Utils

Test-Suite test-utils-tests
  hs-source-dirs: test
  Main-Is: RunTests.hs
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  Ghc-Options: -fwarn-incomplete-patterns
  Build-Depends:
    test-utils,
    base >= 4.7.0 && < 5,
    parsec == 3.1.*,
    QuickCheck == 2.9.*,
    HUnit == 1.6.*,
    text == 1.2.*
